fixed social media icon legibility

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,10 @@ html {
   scroll-behavior: smooth;
 }
 
+footer a i {
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+}
+
 html,
 body {
   min-height: 100%;
